# JoyPI_alarmanlage

./: CMakeLists.txt  MFRC522.cpp  MFRC522.h  main.cpp  matrix.txt  pin_eingabe.cpp  pin_eingabe.h  ws2812.cpp
led_matriks/rgb/: CMakeLists.txt  ws2812.h
rfid/rfid/: CMakeLists.txt
